Last commit until deadline